--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,21 @@ body{
 }
 .container{
     width: 20%;
-    padding: 20px 40px;
+    padding: 1.25rem 2.5rem;
     background-color: orangered;
     position: absolute;
     right: 10%;
     bottom: 10%;
+    border-radius: 1.25rem;
+    transition: 1s;
+    opacity: 0;
+}
+.container:hover{
+    opacity: 1;
+    border-radius: 0;
 }
 h1{
-    padding-bottom: 20px;
+    padding-bottom: 1.25rem;
     text-align: center;
 }
 ul{
